refactor: optimize render mode of tabs

--- a/ZZZDmgCalculator/Components/AdaptableCards.razor
+++ b/ZZZDmgCalculator/Components/AdaptableCards.razor
@@ -3,7 +3,7 @@
 <CascadingValue Value="this" IsFixed="true">
 	@if (Phone)
 	{
-		<RadzenTabs Style="height: 100%" TabPosition="TabPosition.Bottom">
+		<RadzenTabs Style="height: 100%" TabPosition="TabPosition.Bottom" RenderMode="TabRenderMode.Client">
 			<Tabs>
 				@ChildContent
 			</Tabs>
