--- a/ZZZDmgCalculator/Components/Main/SkillLevelSelector.razor
+++ b/ZZZDmgCalculator/Components/Main/SkillLevelSelector.razor
@@ -1,6 +1,6 @@
 @inherits MainComponent
 
-<RadzenTabs>
+<RadzenTabs RenderMode="TabRenderMode.Client">
 	<Tabs>
 		<RadzenTabsItem class="adaptive-tab-item">
 			<ChildContent>
