--- a/ZZZDmgCalculator/wwwroot/css/app.css
+++ b/ZZZDmgCalculator/wwwroot/css/app.css
@@ -68,6 +68,14 @@ body {
 	display: none;
 }
 
+.icon-filled {
+	font-variation-settings: "FILL" 1;
+}
+
+.pointer {
+	cursor: pointer;
+}
+
 .z-select {
 	width: 67px;
 	border: none !important;
