fix: solved choosing an engine not reflected on stats refactor: Changed how components are notified about updates on state Release-As: 1.2.2.1

--- a/ZZZDmgCalculator/Components/Setup/EngineView.razor
+++ b/ZZZDmgCalculator/Components/Setup/EngineView.razor
@@ -16,7 +16,7 @@
 				<RadzenLabel>
 					@Lang["Level"]:
 				</RadzenLabel>
-				<RadzenDropDown TValue="AscensionState" ValueChanged="AscencionChanged" Value="@Engine.Ascension" Data="@(Enum.GetValues<AscensionState>())" Chips="true" class="z-select">
+				<RadzenDropDown TValue="AscensionState" ValueChanged="AscensionChanged" Value="@Engine.Ascension" Data="@(Enum.GetValues<AscensionState>())" Chips="true" class="z-select">
 					<Template>
 						@Info.AscensionToString((AscensionState)(object)context)
 					</Template>
