--- a/ZZZDmgCalculator/Components/Setup/EquipmentSetup.razor
+++ b/ZZZDmgCalculator/Components/Setup/EquipmentSetup.razor
@@ -35,7 +35,7 @@
 		<RadzenTabsItem Text="Engine">
 			@if (Agent.Engine is not null)
 			{
-				<EngineView @bind-Engine="Agent.Engine"/>
+				<EngineView Engine="Agent.Engine"/>
 			}
 		</RadzenTabsItem>
 		@for (var i = 0; i < 6; i++)
