--- a/ZZZDmgCalculator/Pages/Main.razor
+++ b/ZZZDmgCalculator/Pages/Main.razor
@@ -1,8 +1,5 @@
 ﻿@page "/"
-
-@inject StateService State
-@inject InfoService Info
-@inject LangService Lang
+@inherits MainComponent
 
 <CascadingValue Value="this" IsFixed="true">
 	<AdaptableCards>
