fix(About Dialog): Update support email

--- a/ZZZDmgCalculator/Dialogs/AboutDialog.razor
+++ b/ZZZDmgCalculator/Dialogs/AboutDialog.razor
@@ -17,7 +17,7 @@
 		</RadzenLabel>
 		<RadzenLabel>
 			Contact email:
-			<RadzenLink Target="_blank" Path="mailto:support@bangboo.network"> support@bangboo.network</RadzenLink>
+			<RadzenLink Target="_blank" Path="mailto:support@zenless.app"> support@zenless.app</RadzenLink>
 			
 		</RadzenLabel>
 	</RadzenStack>
