style(Overview): Separate level selector from cinema selector

--- a/ZZZDmgCalculator/Components/Main/OverviewCard.razor
+++ b/ZZZDmgCalculator/Components/Main/OverviewCard.razor
@@ -5,7 +5,7 @@
 	<div class="agent-avatar" @onclick="OpenAgentDialog">
 		<img src="@Agent.Info.Url" alt="@Agent.Info.Id"/>
 	</div>
-	<RadzenStack Orientation="Orientation.Vertical" class="mw-0" Gap="10px">
+	<RadzenStack Orientation="Orientation.Vertical" class="mw-0 rz-w-100" Gap="10px">
 		<div class="rz-overflow-hidden">
 			<h2 class="rz-m-0 truncate">@Agent.Info.DisplayName</h2>
 		</div>
