feat(Equipment): Added Disc selection support

--- a/ZZZDmgCalculator/Components/Setup/EquipmentSetup.razor
+++ b/ZZZDmgCalculator/Components/Setup/EquipmentSetup.razor
@@ -44,7 +44,7 @@
 			<RadzenTabsItem Text="Disc">
 				@if (Agent.Discs[ld] is {} discState)
 				{
-					@discState.Info.DisplayName
+					<DiscView Disc="discState" Index="ld"/>
 				}
 			</RadzenTabsItem>
 		}
