style(Adaptable Card): Hide overflow x on desktop resolution

--- a/ZZZDmgCalculator/wwwroot/css/app.css
+++ b/ZZZDmgCalculator/wwwroot/css/app.css
@@ -60,9 +60,7 @@ body {
 }
 
 .setup-tabs > .rz-tabview-panels > .rz-tabview-panel {
-	padding-left: 0;
-	padding-right: 0;
-	padding-bottom: 0;
+	padding: 10px 0 0;
 }
 
 .hidden-tabs > ul {
