feat(Setup): Allow choosing other agents on the team

--- a/ZZZDmgCalculator/wwwroot/css/app.css
+++ b/ZZZDmgCalculator/wwwroot/css/app.css
@@ -75,6 +75,10 @@ body {
 	cursor: pointer;
 }
 
+.no-cursor {
+	cursor: default !important;
+}
+
 .z-select {
 	width: 67px;
 	border: none !important;
