--- a/ZZZDmgCalculator/Components/Setup/SetupCard.razor
+++ b/ZZZDmgCalculator/Components/Setup/SetupCard.razor
@@ -6,6 +6,9 @@
 		<RadzenTabsItem Text=@Lang["Equipment"] class="adaptive-tab-item">
 			<EquipmentSetup Agent="TeamState.Agents[State.CurrentAgentIndex]"/>
 		</RadzenTabsItem>
+		<RadzenTabsItem Text=@Lang["Team"] class="adaptive-tab-item">
+			<TeamSetup Team="TeamState"/>
+		</RadzenTabsItem>
 	</Tabs>
 </RadzenTabs>
 
