--- a/ZZZDmgCalculator/Components/Setup/EquipmentSetup.razor
+++ b/ZZZDmgCalculator/Components/Setup/EquipmentSetup.razor
@@ -30,7 +30,7 @@
 	</div>
 </div>
 
-<RadzenTabs class="hidden-tabs no-border-tabs setup-tabs" @bind-SelectedIndex="_equipmentSelectedIndex" RenderMode="TabRenderMode.Client">
+<RadzenTabs class="hidden-tabs no-border-tabs setup-tabs" @bind-SelectedIndex="_equipmentSelectedIndex" RenderMode="TabRenderMode.Server">
 	<Tabs>
 		<RadzenTabsItem Text="Engine">
 			@if (Agent.Engine is not null)
