Put AgentsView in EquipmentSetup

--- a/ZZZDmgCalculator/Components/Setup/AgentsView.razor
+++ b/ZZZDmgCalculator/Components/Setup/AgentsView.razor
@@ -1,6 +1,6 @@
 @inherits MainComponent
 
-<RadzenCard Variant="Variant.Flat" class="rz-background-color-base-900 rz-p-3">
+<RadzenCard Variant="Variant.Flat" class="rz-background-color-base-900 rz-p-3 rz-mb-3">
 	<RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.SpaceBetween" Gap="10px">
 		@for (var i = 0; i < Agents.Length; i++)
 		{
