feat(Setup): Added buffs tab Release-As: 0.2.0

--- a/ZZZDmgCalculator/Components/Setup/SetupCard.razor
+++ b/ZZZDmgCalculator/Components/Setup/SetupCard.razor
@@ -6,7 +6,7 @@
 			<EquipmentSetup Agent="TeamState.Agents[State.CurrentAgentIndex]"/>
 		</RadzenTabsItem>
 		<RadzenTabsItem Text=@Lang["Buffs"] class="adaptive-tab-item">
-			
+			<BuffSetup Team="TeamState" Agent="TeamState.Agents[State.CurrentAgentIndex]"/>
 		</RadzenTabsItem>
 	</Tabs>
 </RadzenTabs>	
