--- a/ZZZDmgCalculator/Components/Setup/BuffView.razor
+++ b/ZZZDmgCalculator/Components/Setup/BuffView.razor
@@ -19,12 +19,12 @@
 						</div>
 						break;
 					case BuffTrigger.Stack:
-						<RadzenDropDown @bind-Value="Buff.Stacks" Data="@ListsUtil.Simple(0, Buff.MaxStacks)"
+						<RadzenDropDown TValue="int" Value="Buff.Stacks" ValueChanged="StacksChanged" Data="@ListsUtil.Simple(0, Buff.MaxStacks)"
 						                class="buff-stacks"/>
 					
 						break;
 					case BuffTrigger.Switch:
-						<RadzenSwitch class="small-switch" @bind-Value="Buff.Enabled"/>
+						<RadzenSwitch class="small-switch" Value="Buff.Enabled" ValueChanged="SwitchChanged"/>
 						break;
 				}
 			}
