--- a/ZZZDmgCalculator/Components/Setup/BuffSetup.razor
+++ b/ZZZDmgCalculator/Components/Setup/BuffSetup.razor
@@ -1,7 +1,7 @@
 @inherits MainComponent
 
 <RadzenPanelMenu class="buff-menu" >
-	<RadzenPanelMenuItem Text="Engine">
+	<RadzenPanelMenuItem Expanded="Agent.Engine?.Buffs.Count > 0" Text="Engine">
 		<RadzenPanelMenuItem Style="display: none"/>
 		<BuffList Buffs="Agent.Engine?.Buffs"/>
 	</RadzenPanelMenuItem>
