lang(Buffs): Added lang entries for all disc buffs

--- a/ZZZDmgCalculator/Components/Setup/BuffView.razor
+++ b/ZZZDmgCalculator/Components/Setup/BuffView.razor
@@ -44,7 +44,7 @@
 			</div>
 		</RadzenStack>
 		<RadzenText TextStyle="TextStyle.Body2">
-			@Format.BuffDescription(Buff.Info.Description, Buff.Modifiers)
+			@Format.BuffDescription(Buff.Info.Description, Buff)
 		</RadzenText>
 	</RadzenStack>
 </RadzenCard>
