feat(Buffs): Added support for core and additional buffs

--- a/ZZZDmgCalculator/Components/Setup/BuffSetup.razor
+++ b/ZZZDmgCalculator/Components/Setup/BuffSetup.razor
@@ -2,6 +2,8 @@
 
 <RadzenPanelMenu class="buff-menu">
 
+	<BuffList Buffs="_agentBuffs" Title="@Lang["Agent"]"/>
+	
 	<BuffList Buffs="_sharedBuffs" Title="@Lang["Team"]"/>
 	
 	<BuffList Buffs="_engineBuffs" Title="@Lang["Engine"]"/>
