lang(Buffs): Added lang keys for core buffs of current agents

--- a/ZZZDmgCalculator/Components/Setup/BuffView.razor
+++ b/ZZZDmgCalculator/Components/Setup/BuffView.razor
@@ -58,7 +58,7 @@
 		</RadzenText>
 		@if (Buff.Available)
 		{
-			if (Buff.Shared)
+			if (Buff is { Shared: true, SourceInfo: not AgentInfo })
 			{
 				<RadzenText TextStyle="TextStyle.Body2" class="rz-text-disabled-color">
 					@Lang["BuffSharedWarning"]
