refactor(namespace): Rename namespace ZZZDmgCalculator.Utils to namespace ZZZDmgCalculator.Extensions

--- a/ZZZDmgCalculator/Components/Main/AgentStatsTable.razor
+++ b/ZZZDmgCalculator/Components/Main/AgentStatsTable.razor
@@ -1,4 +1,4 @@
-@using ZZZDmgCalculator.Util
+@using ZZZDmgCalculator.Extensions
 @inherits MainComponent
 
 <div class="rz-data-grid rz-has-pager rz-datatable  rz-datatable-scrollable rz-density-compact z-stats-table">
