--- a/ZZZDmgCalculator/Components/Setup/BuffView.razor
+++ b/ZZZDmgCalculator/Components/Setup/BuffView.razor
@@ -1,5 +1,5 @@
 @using ZZZDmgCalculator.Models.State
-@using ZZZDmgCalculator.Util
+@using ZZZDmgCalculator.Extensions
 @inherits MainComponent
 
 @inject FormatService Format
