--- a/ZZZDmgCalculator/Components/Setup/DiscView.razor
+++ b/ZZZDmgCalculator/Components/Setup/DiscView.razor
@@ -1,4 +1,4 @@
-@using ZZZDmgCalculator.Util
+@using ZZZDmgCalculator.Extensions
 @inherits MainComponent
 
 <RadzenStack Orientation="Orientation.Horizontal" class="rz-mb-2" Gap="5px">
