refactor(Storage): Rewrite how data is saved

--- a/ZZZDmgCalculator/Layout/MainLayout.razor
+++ b/ZZZDmgCalculator/Layout/MainLayout.razor
@@ -1,11 +1,8 @@
-﻿@using Blazored.LocalStorage
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
 
 @inject LangService Lang
 @inject InfoService Info
-@inject StateService State
-@inject NotifierService Notifier
-@inject ILocalStorageService LocalStorage
+@inject StorageService Storage	
 
 <FirstTime/>
 
